--- a/todos-client/package.json
+++ b/todos-client/package.json
@@ -10,10 +10,12 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "firebase-tools": "^9.14.0",
     "node-sass": "4",
     "sass-loader": "7",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
